refactor(controller): 重构 DashScope 模型适配逻辑
- 优化了 GenerationParam 的构建过程
- 添加了对不同类型消息的处理支持
- 改进了系统消息和用户消息的处理方式- 增加了对工具响应消息的处理